--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -5,7 +5,7 @@
   margin-bottom: 6rem;
 
   &__photo {
-    flex: 0 1;
+    flex: 0 1 30rem;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
     border-radius: 50%;
     width: 60%;
